just started learning the basics of html

--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
-<!Doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>     
-My Web Page - Welcome!
-    </title>
-    </head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
 <body>
-    <h1>Welcome to My Web Page</h1>
-    <p>This is a simple HTML page to demonstrate basic structure.</p>
-    <p>Feel free to explore and modify the content!</p>
+    <p>Lorem ipsum dolor, sit amet </p>
+    <p>consectetur adipisicing elit. Accusantium dicta minus itaque pariatur? Quae placeat recusandae porro, vel tempora error inventore libero, aut deleniti expedita voluptas eius modi at dolores?</p>
+    
 </body>
-</html>
+</html>   
