--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
 <body>
     <p>Lorem ipsum dolor, sit amet </p>
     <p>consectetur adipisicing elit. Accusantium dicta minus itaque pariatur? Quae placeat recusandae porro, vel tempora error inventore libero, aut deleniti expedita voluptas eius modi at dolores?</p>
-    
+    <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+        <li>Item 4</li>
+        <li>Item 5</li>
+    </ul>
+    <ol>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+        <li>Item 4</li>
+        <li>Item 5</li>
+    </ol>
+
 </body>
 </html>   
